# PCSOLotto_Webscraper

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg
src/: PCSOLotto.py
src/PCSOLotto/: PCSOLotto.py  __init__.py
