[metadata]
name = PCSOLotto_Webscraper
version = 0.0.20
author = Adriane James
author_email = adrianejames27@gmail.com
description = Class library for web scraping lottery results from the PCSO website
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/lonewanderer27/PCSOLotto_Webscraper
project_urls=
    Bug Tracker=https://github.com/lonewanderer27/PCSOLotto_Webscraper/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    beautifulsoup4
    prettytable
    requests

[options.packages.find]
where = src
